fix style of overflow at highlight

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -77,6 +77,9 @@ footer {
 .chapter_navigation {
   margin: 50px 20px 50px 0px;
 }
+.highlight {
+  overflow: auto;
+}
 
 #main_content{
   margin: 20px 40px;
